# MiclantecutliOS

./: CMakeLists.txt  Mictlantecutli.xcf  OS-0.1.img  OS-0.2-cmake.img  OS-0.2.img  OS-0.3-cmake.img  OS-0.4-cmake.img  OS-0.4.5-cmake.img  OS-0.5-cmake.img  README.md  bochsout.txt  boot.asm  bx_enh_dbg.ini  compile.sh  functions.c  functions.h  interrupts.c  interrupts.h  kernel.asm  kernel.c  kernel.h  keyboard.h  read.me  tools.c  tools.h
toolchains/: toolchain-i386-elf.cmake
